# patchpanda-gateway

./: .gitignore  Dockerfile  Makefile  README-dev.md  README.md  alembic.ini  env.example  pyproject.toml  pytest.ini
docs/: gcp-setup.md  github-app-setup.md  runbook.md
scripts/: migrate_aws_to_gcp.py  set_ngrok_url.py  setup_gcp.py  test_github_integration.py  test_webhook_signature.py  validate_github_app.py
src/patchpanda/gateway/: __init__.py  main.py  settings.py
src/patchpanda/gateway/api/: __init__.py  admin.py  coverage.py  jobs.py  webhooks.py
src/patchpanda/gateway/db/: __init__.py  base.py  tables.py
src/patchpanda/gateway/db/migrations/: 0001_initial.py  env.py
src/patchpanda/gateway/models/: __init__.py  config.py  coverage.py  jobs.py
src/patchpanda/gateway/security/: __init__.py  secrets.py  signature.py
src/patchpanda/gateway/services/: __init__.py  authz.py  checks.py  config_loader.py  github_app.py  queue.py
tests/: __init__.py  test_gcp_integration.py  test_github_app.py  test_main.py  test_webhooks.py
