[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "patchpanda-gateway"
version = "0.1.0"
description = "PatchPanda Gateway"
readme = "README.md"
authors = ["Zafar (z.tahirov@gmail.com)"]
packages = [{ include = "patchpanda", from = "src" }]

[tool.poetry.dependencies]
alembic = ">=1.16.5"
boto3 = ">=1.40.19"
fastapi = ">=0.116.1"
google-auth = ">=2.40.3"
google-cloud-kms = ">=3.5.1"
google-cloud-secret-manager = ">=2.24.0"
httpx = ">=0.25.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
psycopg2-binary = ">=2.9.0"
pydantic = ">=2.11.7"
pydantic-settings = ">=2.10.1"
python = ">=3.12,<4.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
python-multipart = ">=0.0.20"
PyJWT = ">=2.10.1"
redis = ">=6.4.0"
sqlalchemy = ">=2.0.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0"}

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0"
flake8 = ">=7.3.0"
httpx = ">=0.28.1"
isort = ">=6.0.1"
mypy = ">=1.7.0"
pytest = ">=8.4.1"
pytest-asyncio = ">=1.1.0"

[tool.poetry.scripts]
patchpanda-gateway = "patchpanda.gateway.main:app"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
